Bug fix
Fixed some bug highlighted by the tests